feat: change request processing logic and add JsonLogger
