# backend/src/main/java/rs/delimo/request/application/RequestService.java
@@ -1,9 +1,6 @@
 package rs.delimo.request.application;
 
-import rs.delimo.api.dto.RequestFilterDto;
-import rs.delimo.api.dto.RequestInputDto;
-import rs.delimo.api.dto.RequestOutputDto;
-import rs.delimo.api.dto.RequestPageResponse;
+import rs.delimo.api.dto.*;
 import rs.delimo.user.domain.User;
 
 import java.util.UUID;
@@ -12,7 +9,7 @@ import java.util.UUID;
 public interface RequestService {
     RequestOutputDto create(RequestInputDto request, User user);
 
-    RequestOutputDto edit(UUID requestID, RequestInputDto request, User user);
+    RequestOutputDto edit(UUID requestID, RequestUpdateDto request, User user);
 
     RequestOutputDto getById(UUID requestId);
 
